--- a/webapp/src/style.scss
+++ b/webapp/src/style.scss
@@ -88,6 +88,9 @@ code {
 .page {
   &__container {
     background-color: white;
+    overflow-y: auto;
+    height: 100%;
+    max-height: 100%;
   }
 
   &__content {
